crates/ars-collections/tests/ui/tab_key_discriminant_nonliteral.stderr
error: TabKey discriminants must be non-negative integer literals
 --> tests/ui/tab_key_discriminant_nonliteral.rs:9:15
  |
9 |     Profile = PROFILE,
  |               ^^^^^^^
